--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header>
-        <h1> Curiosidades de tecnologia</h1>
-        <p> Tudo aquilo que você sempre quis saber sobre Tech, em um único lugar</p>
+        <h1> Isabelle Passos</h1>
+        <p> A pessoa que ama salgadinho mais do que Arthur</p>
     </header>
     <nav>
         <a href="#">Home</a>
